--- a/sites/all/themes/wttoc/package.json
+++ b/sites/all/themes/wttoc/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.9.0",
+    "gulp": "~3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-watch": "^4.3.3"
-  }
+  },
+  "description": "wttoc subtheme from omega 4",
+  "main": "gulpfile.js",
+  "author": "wttoc",
+  "license": "none"
 }
