omega more gulp setup

--- a/sites/all/themes/wttoc/package.json
+++ b/sites/all/themes/wttoc/package.json
@@ -8,9 +8,9 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "~3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-autoprefixer": "~3.0.2",
+    "gulp-sass": "~2.0.4",
+    "gulp-sourcemaps": "~1.5.2",
     "gulp-watch": "^4.3.3"
   },
   "description": "wttoc subtheme from omega 4",
