--- a/sites/all/themes/wttoc/package.json
+++ b/sites/all/themes/wttoc/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "bower": "^1.5.3",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.0.2",
     "gulp-sass": "~2.0.4",
