--- a/sites/all/themes/wttoc/bower.json
+++ b/sites/all/themes/wttoc/bower.json
@@ -19,6 +19,7 @@
     "tests"
   ],
   "dependencies": {
-    "cssowl": "~1.3.1"
+    "cssowl": "~1.3.1",
+    "compass-breakpoint": "breakpoint-sass#~2.6.1"
   }
 }
