--- a/sites/all/themes/wttoc/bower.json
+++ b/sites/all/themes/wttoc/bower.json
@@ -22,6 +22,7 @@
     "cssowl": "~1.3.1",
     "compass-breakpoint": "breakpoint-sass#~2.6.1",
     "jquery-ui": "1.11.4",
-    "jquery.event.swipe": "~0.5.4"
+    "jquery.event.swipe": "~0.5.4",
+    "matchHeight": "matchheight#~0.6.0"
   }
 }
