--- a/sites/all/themes/wttoc/bower.json
+++ b/sites/all/themes/wttoc/bower.json
@@ -25,6 +25,7 @@
     "jquery.event.swipe": "~0.5.4",
     "matchHeight": "matchheight#~0.6.0",
     "Readmore.js": "readmore#~2.0.5",
-    "sumoselect": "~2.0.2"
+    "sumoselect": "~2.0.2",
+    "jquery-placeholder": "~2.1.3"
   }
 }
