library fontello update

--- a/sites/all/libraries/fontello/config.json
+++ b/sites/all/libraries/fontello/config.json
@@ -7,6 +7,34 @@
   "ascent": 850,
   "glyphs": [
     {
+      "uid": "615b7eb3cd43418254b0d4277bcd77b1",
+      "css": "fg",
+      "code": 59436,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M44 844V322H397V383H114V544H361V606H114V844H44ZM733 639V578L956 578V772C922 800 886 819 850 833 814 847 778 853 739 853 689 853 642 842 600 819 558 797 525 767 506 725 483 683 472 636 472 586 472 536 483 489 503 444 525 400 556 367 594 347 633 325 681 314 733 314 772 314 806 319 836 333 867 344 892 364 908 383 925 406 939 433 947 469L886 486C878 458 869 439 856 422 844 408 828 394 806 386 783 378 761 372 733 372 703 372 675 378 650 386 628 394 608 408 594 425 581 442 569 458 561 478 547 511 542 544 542 583 542 631 550 669 567 700 583 731 606 756 636 769 667 783 700 792 733 792 764 792 792 786 822 775 850 764 872 750 886 739V639H733Z",
+        "width": 1000
+      },
+      "search": [
+        "fg"
+      ]
+    },
+    {
+      "uid": "c27f914081fe699d4568873abe5b9ade",
+      "css": "e",
+      "code": 59435,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M211 950V125H808V222H319V475H778V572H319V853H828V950H211Z",
+        "width": 1000
+      },
+      "search": [
+        "e"
+      ]
+    },
+    {
       "uid": "c2314ed1d2314b89f9285c53bcbf2548",
       "css": "child",
       "code": 59423,
@@ -76,6 +104,18 @@
       "uid": "531bc468eecbb8867d822f1c11f1e039",
       "css": "calendar",
       "code": 59420,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "3a00327e61b997b58518bd43ed83c3df",
+      "css": "login",
+      "code": 59437,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "0d20938846444af8deb1920dc85a29fb",
+      "css": "logout",
+      "code": 59438,
       "src": "fontawesome"
     },
     {
