facetapi module dev

--- a/sites/all/libraries/fontello/config.json
+++ b/sites/all/libraries/fontello/config.json
@@ -305,6 +305,12 @@
       "src": "entypo"
     },
     {
+      "uid": "da0fd38d651815e3a12f6c030ff1fe5b",
+      "css": "newspaper-1",
+      "code": 59448,
+      "src": "entypo"
+    },
+    {
       "uid": "7f6916533c0842b6cec699fd773693d3",
       "css": "hourglass",
       "code": 59433,
