fontello library updated

--- a/sites/all/libraries/fontello/config.json
+++ b/sites/all/libraries/fontello/config.json
@@ -185,6 +185,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "9854f7f091bd4fdf9b8735ed66667b9d",
+      "css": "pound",
+      "code": 59449,
+      "src": "fontawesome"
+    },
+    {
       "uid": "026007bd17bfc67f3fe013199676f620",
       "css": "dollar",
       "code": 59410,
