library update fontello

--- a/sites/all/libraries/fontello/config.json
+++ b/sites/all/libraries/fontello/config.json
@@ -299,6 +299,12 @@
       "src": "entypo"
     },
     {
+      "uid": "3ba4275937db277075fc47d6b5a69a2e",
+      "css": "back",
+      "code": 59450,
+      "src": "entypo"
+    },
+    {
       "uid": "bcb868184ff9c35f8aef564f50c0d649",
       "css": "feather",
       "code": 59430,
