--- a/sites/all/libraries/fontello/config.json
+++ b/sites/all/libraries/fontello/config.json
@@ -191,6 +191,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "a73c5deb486c8d66249811642e5d719a",
+      "css": "arrows-cw",
+      "code": 59455,
+      "src": "fontawesome"
+    },
+    {
       "uid": "107ce08c7231097c7447d8f4d059b55f",
       "css": "ellipsis",
       "code": 59424,
