update fontello library

--- a/sites/all/libraries/fontello/config.json
+++ b/sites/all/libraries/fontello/config.json
@@ -101,6 +101,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "9a76bc135eac17d2c8b8ad4a5774fc87",
+      "css": "download",
+      "code": 59456,
+      "src": "fontawesome"
+    },
+    {
       "uid": "ab95e1351ebaec5850101097cbf7097f",
       "css": "quote-left",
       "code": 59431,
