--- a/sites/all/libraries/fontello/config.json
+++ b/sites/all/libraries/fontello/config.json
@@ -239,6 +239,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "fa9a0b7e788c2d78e24cef1de6b70e80",
+      "css": "brush",
+      "code": 59457,
+      "src": "fontawesome"
+    },
+    {
       "uid": "6975c4c656d41a0283d9c52516bf38ed",
       "css": "delicious",
       "code": 59405,
