fontello library update

--- a/sites/all/libraries/fontello/config.json
+++ b/sites/all/libraries/fontello/config.json
@@ -149,6 +149,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "e99461abfef3923546da8d745372c995",
+      "css": "cog",
+      "code": 59458,
+      "src": "fontawesome"
+    },
+    {
       "uid": "9affc98d652b86628d650ee58dbf0357",
       "css": "basket",
       "code": 59412,
