--- a/.htaccess
+++ b/.htaccess
@@ -57,8 +57,8 @@ DirectoryIndex index.php index.html index.htm
   RewriteEngine on
     #Force Domain
      RewriteCond %{HTTP_HOST} .
-     RewriteCond %{HTTP_HOST} !^development.wheretotakeourchildren\.co\.uk [NC]
-     RewriteRule (.*) http://development.wheretotakeourchildren\.co\.uk/$1 [R=302,L]
+     RewriteCond %{HTTP_HOST} !^www.wheretotakeourchildren\.co\.uk [NC]
+     RewriteRule (.*) http://www.wheretotakeourchildren\.co\.uk/$1 [R=302,L]
 
     # Force HTTPS
      RewriteCond %{HTTPS} off
