--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # Ignore configuration files that may contain sensitive information.
-sites/*/*settings*.php
+sites/*/settings*.php
 
-# Ignore paths that contain generated content.
-files/
+# Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
 
@@ -37,3 +36,4 @@ xmlrpc.php
 /profiles
 /scripts
 /themes
+/sites/default
