new email registration module added, form styles changed

--- a/sites/all/themes/wttoc/package.json
+++ b/sites/all/themes/wttoc/package.json
@@ -8,7 +8,7 @@
   "dependencies": {},
   "devDependencies": {
     "bower": "^1.5.3",
-    "gulp": "~3.9.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "~3.0.2",
     "gulp-bower": "0.0.10",
     "gulp-sass": "~2.0.4",
